Fix text alignment issues

--- a/style.css
+++ b/style.css
@@ -520,7 +520,7 @@ body {
   padding-bottom: 4rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
   max-width: 50ch;
 }
 
@@ -607,7 +607,7 @@ body {
   }
 
   .destination-meta {
-    --gap: 6rem;
+    --gap: min(6vw, 6rem);
     justify-content: flex-start;
   }
 }
